# frankenas

./: 22 -> 24 upgrade  ansible.cfg  bastion  inventory.yml  jellyfin-create  jellyfin-create.sh  jellyfin-provision  jellyfin-provision.sh  pct-generic.sh  port-royal-create.sh  port-royal-provision.sh  port-tortuga-create.sh  port-tortuga-provision.sh  pve-provision  readme.md  requirements.yml  robot.key  vpn-border-gateway-provision.sh
ansible/: ansible.cfg
docker/: ships.yml  ships.yml.save
legacy/: README.md  pct-generic.sh  vpn-border-gateway-provision.sh
plays/: auth_srv_deploy.yml  config_auth_srv.yml  config_dns_srv.yml  config_docker.yml  config_log_srv.yml  config_piracy_ports.yml  config_reverse_proxy.yml  set_dns.yml  (+28 more)
scripts/frankinception/: README.md  __init__.py  __main__.py  app.py  catalogs.py  context.py  deps.py  host_vars.py  inventory.py  models.py  pyproject.toml
scripts/frankinception/flows/: __init__.py  create_device.py  stubs.py
scripts/frankinception/src/frankinception/: __init__.py  app.py  bind_mapper.py  catalogs.py  compose_parser.py  compose_vars.py  hostvars.py  inventory.py  paths.py  plays.py  roles.py  runner.py  state.py  vault.py  yaml_io.py
scripts/frankinception/src/frankinception/screens/: __init__.py  _inserters.py  catalog_picker.py  compose_import.py  container_editor.py  container_override.py  docker_groups.py  docker_list.py  host_editor.py  host_list.py  new_host.py  play_runner.py  secrets.py  var_resolver.py
scripts/frankinception/tests/: test_smoke.py
scripts/frankinception/ui/: __init__.py  dialogs.py
(+365 files in other folders)
